--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,9 @@
-name=Bolder Flight Systems SBUS
-version=1.0.0
+name=TheDIYGuy999 SBUS
+version=1.1.0
 author=Brian Taylor <brian.taylor@bolderflight.com>
-maintainer=Brian Taylor <brian.taylor@bolderflight.com>
+maintainer=TheDIYGuy999
 sentence=Library for communicating with SBUS receivers and servos.
-paragraph=This library works with Teensy 3.x and LC devices, the STM32L4, and the Maple Mini. If you have other Arduino devices or port this library, I would appreciate getting pull requests to update this to work with as many devices as possible.
-category=Device Control
-url=https://github.com/bolderflight/SBUS
+paragraph=This library works with Teensy 3.x and LC devices, the STM32L4, ESP32 and the Maple Mini. Opzimised for use with ESP32.
+url=https://github.com/TheDIYGuy999/SBUS
 architectures=*
 includes=SBUS.h
